package com.pluralsight.asset;

public class Gold extends FixedAsset {
    private double weight;

    public Gold(String name, double marketValue, double weight) {
        super(name, marketValue);
        this.weight = weight;
    }

    @Override
    public double getValue() {
        return getMarketValue() * weight;  // Value is adjusted by weight
    }
}