package com.pluralsight.asset;

public interface Valuable {
    double getValue();
}